--- a/app/src/main/res/layout/activity_nuovo_solco.xml
+++ b/app/src/main/res/layout/activity_nuovo_solco.xml
@@ -25,7 +25,7 @@
         android:text= "Nome solco :"
         android:textColor="#000000"
         android:layout_marginLeft="20dp"
-        android:textSize="15dp"/>
+        android:textSize="18dp"/>
 
     <EditText
         android:id="@+id/solco"
@@ -53,12 +53,13 @@
             android:textSize="18sp"/>
         <Button
             android:id="@+id/button1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/col_disp"
             android:text="inserisci dispositivo tramite bluetooth"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/border_button"
             android:textAllCaps="false"
             android:textColor="#fff"
@@ -78,7 +79,7 @@
          />
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/text2"
         android:layout_marginLeft="100dp"
@@ -86,6 +87,7 @@
         android:background="@drawable/border_button"
         android:text="Inserisci dispositivo nel sistema"
         android:textAllCaps="false"
+        android:onClick="addNewSolco"
         android:textColor="#fff"
         android:textSize="18sp"
         android:layout_centerHorizontal="true"/>
