--- a/app/src/main/res/layout/activity_nuovo_solco.xml
+++ b/app/src/main/res/layout/activity_nuovo_solco.xml
@@ -3,12 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageButton
-        android:id="@+id/backId"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+    <Button
+        android:id="@+id/back"
+        android:layout_width="80dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/back"
-        android:onClick="goBack" />
+        android:onClick="goBack"
+        />
 
 <LinearLayout
     android:id="@+id/primo"
