--- a/app/src/main/res/layout/acitivity_dati_campo.xml
+++ b/app/src/main/res/layout/acitivity_dati_campo.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageButton
+    <Button
         android:id="@+id/backId"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -22,7 +22,6 @@
             android:layout_height="103dp"
             android:layout_marginTop="50dp"
             android:layout_below="@id/Datcam">
-
         </ListView>
 
 </RelativeLayout>
