Added DatiCampo2 Interface

--- a/app/src/main/res/layout/activity_nuovo_solco.xml
+++ b/app/src/main/res/layout/activity_nuovo_solco.xml
@@ -14,7 +14,7 @@
 
 <LinearLayout
     android:id="@+id/primo"
-    android:layout_below="@id/backId"
+    android:layout_below="@id/back"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
