--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="ButtonColor">#F1C961</color>
     <color name="TableColor">#8CA3B9</color>
+    <color name="ButtonIrrigazione">#FF4CAF50</color>
 </resources>
