Improved Irrigazione Interface

--- a/app/src/main/res/layout/activity_nuovo_solco.xml
+++ b/app/src/main/res/layout/activity_nuovo_solco.xml
@@ -66,6 +66,7 @@
             android:textAllCaps="false"
             android:textColor="#fff"
             android:textSize="18sp"
+            android:onClick="addNewDispositive"
             android:layout_centerHorizontal="true"
         />
      <TextView
