--- a/app/src/main/res/layout/activity_semina.xml
+++ b/app/src/main/res/layout/activity_semina.xml
@@ -68,14 +68,10 @@
         </ListView>
     </TableLayout>
     </LinearLayout>
-    <ImageView
-        android:id="@+id/Sem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/lineare1"
-        android:src="@drawable/lattuga"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:paddingTop="10dp"
+    <com.github.mikephil.charting.charts.BarChart
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:id="@+id/Datcam"
+        android:layout_below="@+id/lineare1"
         />
 </RelativeLayout>
