--- a/app/src/main/res/layout/element_list_daticampo.xml
+++ b/app/src/main/res/layout/element_list_daticampo.xml
@@ -46,6 +46,7 @@
         android:layout_height="20dp"
         android:layout_alignLeft="@+id/view2"
         android:layout_marginLeft="17dp"
+        android:onClick="modItem"
         android:layout_marginRight="30dp"
         android:src="@drawable/change" />
 
