Update su main,nuovo solco, registrazione
Mainactivity ho aggiustato i bug però si deve ancora cambiare il colore dei bottoni,
Nuovo solco e registrazione gestito col time e come nel prototipo

--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -48,6 +48,7 @@
             android:layout_height="30dp"
             android:background="@drawable/et_style"
             android:layout_marginLeft="150dp"
+            android:inputType="textEmailAddress"
             />
     </RelativeLayout>
 
