--- a/app/src/main/res/layout/activity_irrigazione.xml
+++ b/app/src/main/res/layout/activity_irrigazione.xml
@@ -79,102 +79,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linear1"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/image2"
-            android:layout_width="24dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="15dp"
-            android:src="@drawable/red_p" />
-
-        <TextView
-            android:id="@+id/text_campo2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Campo 2"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-
-        <Spinner
-            android:id="@+id/scelta2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/spinner_style"
-            android:entries="@array/trattamento"
-            android:padding="15dp" />
-
-        <Button
-            android:id="@+id/button_campo2"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/spinner_style"
-            android:backgroundTint="#4CAF50"
-            android:onClick="play2"
-            android:text="Avvia"
-            android:textColor="#ffff" />
+<ListView
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    android:id="@+id/list">
+</ListView>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linear2"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/image3"
-            android:layout_width="24dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="15dp"
-            android:src="@drawable/red_p" />
-
-        <TextView
-            android:id="@+id/text_campo3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Campo 3"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-
-        <Spinner
-            android:id="@+id/scelta3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/spinner_style"
-            android:entries="@array/trattamento"
-            android:padding="15dp" />
-
-        <Button
-            android:id="@+id/button_campo3"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/spinner_style"
-            android:backgroundTint="#4CAF50"
-            android:onClick="play3"
-            android:text="Avvia"
-            android:textColor="#ffff" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linear2">
 
         <Button
             android:id="@+id/button2"
+            android:layout_below="@+id/linear2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/border_button"
             android:onClick="addNewCampo"
@@ -182,5 +103,5 @@
             android:textAllCaps="false"
             android:textColor="#fff"
             android:textSize="18sp" />
-    </RelativeLayout>
+
 </RelativeLayout>
