--- a/app/src/main/res/layout/element_list_irrigazione.xml
+++ b/app/src/main/res/layout/element_list_irrigazione.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/image1"
+        android:id="@+id/image2"
         android:layout_width="24dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
@@ -20,7 +20,7 @@
         android:textSize="20sp" />
 
     <Spinner
-        android:id="@+id/scelta1"
+        android:id="@+id/scelta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -29,14 +29,14 @@
         android:padding="15dp" />
 
     <Button
-        android:id="@+id/button_campo1"
+        android:id="@+id/button_newCamp"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/spinner_style"
         android:backgroundTint="#4CAF50"
-        android:onClick="play1"
-        android:text="Avvia"
+        android:onClick="newLink"
+        android:text="Collega"
         android:textColor="#ffff" />
 
 </LinearLayout>
