--- a/app/src/main/res/layout/element_list_irrigazione.xml
+++ b/app/src/main/res/layout/element_list_irrigazione.xml
@@ -11,7 +11,7 @@
         android:src="@drawable/red_p" />
 
     <TextView
-        android:id="@+id/nomeCampo"
+        android:id="@+id/text_campo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
