Change color to 'Collega' button in Irrigazione 2

--- a/app/src/main/res/layout/element_list_irrigazione.xml
+++ b/app/src/main/res/layout/element_list_irrigazione.xml
@@ -34,7 +34,7 @@
         android:layout_height="30dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/spinner_style"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="#ACACAC"
         android:onClick="newLink"
         android:text="Collega"
         android:textColor="#ffff" />
