--- a/app/src/main/res/layout/activity_semina.xml
+++ b/app/src/main/res/layout/activity_semina.xml
@@ -28,10 +28,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/text1"
-        android:id="@+id/lineare1">
+        android:id="@+id/linear1">
 
     <TableLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -39,14 +39,15 @@
         android:id="@+id/table">
     <TableRow
         android:background="@color/TableColor">
+
         <TextView
-            android:text="Prodotto"
-            android:textSize="20sp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:textColor="#ffff"
             android:gravity="left"
-            />
+            android:text="Prodotto"
+            android:textColor="#ffff"
+            android:textSize="20sp" />
+
         <LinearLayout
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -68,10 +69,20 @@
         </ListView>
     </TableLayout>
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="In base ai prodotti registarti \n potresti coltivare i seguenti prodotti:"
+        android:textSize="18dp"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:id="@+id/info"
+        android:layout_below="@+id/linear1"/>
     <com.github.mikephil.charting.charts.BarChart
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:id="@+id/Datcam"
-        android:layout_below="@+id/lineare1"
+        android:layout_below="@+id/info"
         />
 </RelativeLayout>
