--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -25,7 +25,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:text="Inserisci la tua e-mail\ne le invieremo le modalità\nper il cambio password"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:gravity="center"
         android:textStyle="bold" />
 
     <RelativeLayout
@@ -39,9 +40,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="20dp"/>
         <EditText
             android:id="@+id/sendEmail"
             android:layout_width="220dp"
