--- a/app/src/main/res/drawable/bluetooth_button.xml
+++ b/app/src/main/res/drawable/bluetooth_button.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"  android:padding="10dp"
     android:shape="rectangle">
-    <solid android:color="@color/BlueToothButton" />
+    <solid android:color="@color/bluetoothbutton" />
     <corners
-        android:bottomLeftRadius="50dp"
-        android:bottomRightRadius="50dp"
-        android:topLeftRadius="50dp"
-        android:topRightRadius="50dp" />
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp" />
     <stroke android:width="1dp" />
 </shape>
